# telegram-trader-signal-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_bot.ps1
deploy/hetzner/: deploy_signal_bot.py  setup.sh  telegram-trader-signal-bot.service
scalper/: .env.example  main.py  pyproject.toml
scalper/deploy/: deploy_scalper.py  scalper.service
scalper/scalper/: bot.py  circuit_breaker.py  config.py  database.py  indicators.py  learning_bridge.py  market_data.py  paper_trader.py  regime_reader.py  signal_bridge.py  telegram_notifier.py  ticker_scanner.py
src/trader_signal_bot/: __init__.py  app.py  config.py  domain.py
src/trader_signal_bot/bot/: handlers.py
src/trader_signal_bot/services/: __init__.py  analysis.py  google_sheets_state.py  learning.py  macro_risk.py  market_data.py  news.py  regime.py  registry.py  signal_engine.py  sqlite_learning_store.py  sqlite_state.py  state.py
tests/: test_signal_engine.py
